@@ -33,9 +33,13 @@ jar {
     baseName 'org.jvoicexml.demo.helloworlddemo'
 }
 
-mainClassName = "org.jvoicexml.demo.helloworldservletdemo.HelloWorldDemo"
-applicationDefaultJvmArgs = ["-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy" ]
-
 run {
+    mainClassName = "org.jvoicexml.demo.helloworldservletdemo.HelloWorldDemo"
+    classpath += files("${buildDir}/resources/main")
     args 'http://localhost:8080/helloworldservletdemo/HelloWorld'
+    jvmArgs = ["-Djvoicexml.config=${buildDir}/resources/main",
+               "-Djava.security.manager",
+               "-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy"]
 }
+
+
