@@ -26,6 +26,11 @@ jar {
     baseName 'org.jvoicexml.demo.inputdemo'
 }
 
-mainClassName = "org.jvoicexml.demo.inputdemo.InputDemo"
-applicationDefaultJvmArgs = ["-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy" ]
-
+run {
+    mainClassName = "org.jvoicexml.demo.inputdemo.InputDemo"
+    classpath += files("${buildDir}/resources/main")
+    args 'http://localhost:8080/helloworldservletdemo/HelloWorld'
+    jvmArgs = ["-Djvoicexml.config=${buildDir}/resources/main",
+               "-Djava.security.manager",
+               "-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy"]
+}
