@@ -8,10 +8,11 @@ repositories {
 dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.1'
+    compile group: 'org.jvoicexml', name: 'org.jvoicexml.client', version: JVOICEXML_VERSION
+    compile group: 'org.jvoicexml', name: 'org.jvoicexml.xml', version: JVOICEXML_VERSION
+    compile group: 'org.jvoicexml', name: 'org.jvoicexml.implementation.jtapi', version: JVOICEXML_VERSION
 
-    compile project(':org.jvoicexml')
-    compile project(':org.jvoicexml.client')
-    compile project(':org.jvoicexml.implementation.jtapi')
+    runtime group: 'org.jvoicexml', name: 'org.jvoicexml.jndi', version: JVOICEXML_VERSION
 }
 
 jar {
@@ -25,6 +26,10 @@ jar {
     baseName 'org.jvoicexml.demo.jtapidemo'
 }
 
-mainClassName = "org.jvoicexml.demo.jtapidemo.JtapiDemo"
-applicationDefaultJvmArgs = ["-Djava.security.policy=${projectDir}/src/main/resources/jvoicexml.policy" ]
-
+run {
+    mainClassName = "org.jvoicexml.demo.jtapidemo.JtapiDemo"
+    classpath += files("${buildDir}/resources/main")
+    jvmArgs = ["-Djvoicexml.config=${buildDir}/resources/main",
+               "-Djava.security.manager",
+               "-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy"]
+}
