@@ -42,7 +42,7 @@ xslt {
     input "${projectDir}/src/main/config/pizza.vxml"
     output "${sourceSets.main.output.resourcesDir}/pizza.vxml"
     parameters(
-        applicationId: project.property('org.jvoicexml.demo.luis.applicationId')
+        applicationId: project.property('JVOICEXML_DEMO_LUIS_APPLICATIONID')
     )
 }
 
@@ -59,10 +59,13 @@ jar {
     baseName 'org.jvoicexml.demo.luis'
 }
 
-mainClassName = "org.jvoicexml.demo.luis.LUISDemo"
-applicationDefaultJvmArgs = ["-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy" ]
-
 run {
     dependsOn xslt
+    
+    mainClassName = "org.jvoicexml.demo.luis.LUISDemo"
+    classpath += files("${buildDir}/resources/main")
+    jvmArgs = ["-Djvoicexml.config=${buildDir}/resources/main",
+               "-Djava.security.manager",
+               "-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy"]
 }
 
