@@ -8,9 +8,10 @@ repositories {
 dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.1'
-
     compile project(':org.jvoicexml')
     compile project(':org.jvoicexml.client')
+
+    runtime group: 'org.jvoicexml', name: 'org.jvoicexml.jndi', version: JVOICEXML_VERSION
 }
 
 jar {
@@ -24,6 +25,10 @@ jar {
     baseName 'org.jvoicexml.demo.marc'
 }
 
-mainClassName = "org.jvoicexml.demo.marcdemo.MarcDemo"
-applicationDefaultJvmArgs = ["-Djava.security.policy=${projectDir}/src/main/resources/jvoicexml.policy" ]
-
+run {
+    mainClassName = "org.jvoicexml.demo.marcdemo.MarcDemo"
+    classpath += files("${buildDir}/resources/main")
+    jvmArgs = ["-Djvoicexml.config=${buildDir}/resources/main",
+               "-Djava.security.manager",
+               "-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy"]
+}
