@@ -29,7 +29,6 @@ dependencies {
     
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.1'
-
     compile group: 'org.jvoicexml', name: 'org.jvoicexml.client', version: JVOICEXML_VERSION
     compile group: 'org.jvoicexml', name: 'org.jvoicexml.xml', version: JVOICEXML_VERSION
 
@@ -58,9 +57,12 @@ jar {
     baseName 'org.jvoicexml.demo.objecttagdemo'
 }
 
-mainClassName = "org.jvoicexml.demo.objecttagdemo.ObjectTagDemo"
-applicationDefaultJvmArgs = ["-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy" ]
-
 run {
     dependsOn xslt
+
+    mainClassName = "org.jvoicexml.demo.objecttagdemo.ObjectTagDemo"
+    classpath += files("${buildDir}/resources/main")
+    jvmArgs = ["-Djvoicexml.config=${buildDir}/resources/main",
+               "-Djava.security.manager",
+               "-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy"]
 }
