@@ -33,6 +33,10 @@ jar {
     baseName 'org.jvoicexml.demo.recorddemo'
 }
 
-mainClassName = "org.jvoicexml.demo.recorddemo.RecordDemo"
-applicationDefaultJvmArgs = ["-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy" ]
-
+run {
+    mainClassName = "org.jvoicexml.demo.recorddemo.RecordDemo"
+    classpath += files("${buildDir}/resources/main")
+    jvmArgs = ["-Djvoicexml.config=${buildDir}/resources/main",
+               "-Djava.security.manager",
+               "-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy"]
+}
